packages/jsii/test/negatives/neg.property-name.2.ts
///!MATCH_ERROR: ERROR 'my_Prop' must use camel-case

export class MyClass {
    my_Prop?: number;
}
